<resources>
    <string name="app_name" translatable="false">Github User</string>
    <string name="followers" translatable="false">Followers</string>
    <string name="following" translatable="false">Following</string>
    <string name="author_name" translatable="false">Budi Ardianata</string>
    <string name="author_email" translatable="false">budiardianata@gmail.com</string>
    <string name="source_code" translatable="false">Source Code</string>
    <string name="theme_key" translatable="false">themePref</string>
    <string name="theme">Application Theme</string>
    <string name="search_hint">Input Github Username First..</string>
    <string name="language">Language</string>
    <string name="language_summary">Change Language</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About Me</string>
    <string name="not_found">Data Not Found</string>
    <string name="not_have">%1$s Not Have %2$s</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_add">%s Add to Favorite</string>
    <string name="favorite_remove">%s Remove from Favorite</string>
    <string name="reminder_key" translatable="false">reminder</string>
    <string name="reminder">Daily reminder</string>
    <string name="reminder_off">Daily reminder Off</string>
    <string name="reminder_on">Daily reminder On </string>
    <string name="reminder_msg">Lets find popular github users now</string>
    <string name="reminder_time" translatable="false">16:50</string>
</resources>
