<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_navigation"
    app:startDestination="@id/home_destination">

    <fragment
        android:id="@+id/home_destination"
        android:name="com.pdk.bfaadicoding.submission.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/details_action"
            app:destination="@id/details_destination"
            />
        <action
            android:id="@+id/favorite_action"
            app:destination="@id/favorite_destination" />
        <action
            android:id="@+id/settings_action"
            app:destination="@id/settings_destination" />
    </fragment>
    <fragment
        android:id="@+id/details_destination"
        android:name="com.pdk.bfaadicoding.submission.ui.fragments.DetailsFragment"
        android:label="{Username}"
        tools:layout="@layout/fragment_details" >

        <argument
            android:name="Username"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/favorite_destination"
        android:name="com.pdk.bfaadicoding.submission.ui.fragments.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/favorite_details_action"
            app:destination="@id/details_destination" />
    </fragment>
    <fragment
        android:id="@+id/settings_destination"
        android:name="com.pdk.bfaadicoding.submission.ui.fragments.SettingsFragment"
        android:label="@string/settings" >
        <action
            android:id="@+id/settings_to_about"
            app:destination="@id/about_destination" />
    </fragment>
    <dialog
        android:id="@+id/about_destination"
        android:name="com.pdk.bfaadicoding.submission.ui.fragments.AboutFragment"
        android:label="AboutFragment" />
</navigation>